# rust-ffi-guide

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  async.html  basic_request.html  book.toml  build.sh  cbindgen.html  client.html  complex_request.html  dynamic_loading.html  index.html  overview.html  print.html  rest_client.pro  send_basic.html  setting_up.html  testing.html
book/: SUMMARY.md  async.md  basic_request.md  cbindgen.md  client.md  complex_request.md  dynamic_loading.md  error_handling.md  future_work.md  overview.md  send_basic.md  setting_up.md  testing.md
book/errors/: exception_safety.md  index.md  logging.md  return_types.md
book/fun/: CMakeLists.txt  index.md  problems.md  solutions.md
book/fun/problem_1/: adder.rs
book/fun/problem_2/: main  main.cpp
book/fun/problem_3/: main.cpp
book/fun/problem_4/: main.cpp
ci/: build.sh  deploy.sh  github-pages.sh  install.sh  test.sh
client/: CMakeLists.txt  Cargo.toml  build.rs
client/src/: errors.rs  ffi.rs  lib.rs  methods.rs  plugins.rs  request.rs  response.rs  utils.rs
errors/: exception_safety.html  index.html  logging.html  return_types.html
fun/: index.html  problems.html  solutions.html
fun/problem_1/: CMakeLists.txt  main.cpp
fun/problem_2/: CMakeLists.txt  foo.rs
fun/problem_3/: CMakeLists.txt  home.rs
fun/problem_4/: CMakeLists.txt  logging.rs
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  wrappers.cpp  wrappers.hpp
injector-plugin/: CMakeLists.txt  Cargo.toml
injector-plugin/src/: lib.rs
src/: SUMMARY.md  best_practices.md  index.md  nuts-and-bolts.md  worked-examples.md
src/arrays/: .gitignore  Makefile  array_utils.c  averages.rs  index.md  main.c  main.rs  rusty_array_utils.rs
src/background/: index.md
src/bindgen/: Makefile  index.md
src/bindgen/bzip2/: Cargo.toml  build.rs
src/bindgen/bzip2/src/: lib.rs
src/binding-generators/: index.md
src/callbacks/: .gitignore  Makefile  basic.c  basic_main.rs  closures_main.rs  foo.rs  index.md  main.c  stateful.rs  stateful_main.c
src/callbacks/app/: Cargo.toml  build.rs
src/callbacks/app/src/: expensive.c  main.rs
src/dynamic-loading/: Makefile  index.md  main.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
src/dynamic-loading/wordcount/: Cargo.toml
src/dynamic-loading/wordcount/src/: lib.rs  plugin.rs  wordcount.rs
src/dynamic_loading/: Makefile  adder.rs  index.md
src/dynamic_loading/loading/: Cargo.toml
src/dynamic_loading/loading/src/: main.rs
src/errors/: Makefile  index.md  main.c
src/errors/tomlreader/: Cargo.toml  build.rs  tomlreader.h
src/errors/tomlreader/src/: errors.rs  lib.rs
src/exceptions/: index.md
src/footguns/: index.md
src/getting-started/: Makefile  hello_world.rs  index.md
src/introduction/: Makefile  hello.c  index.md  main.rs
src/linking/: .gitignore  Makefile  basic_add.rs  index.md
src/linking/cargo_static/: Cargo.toml  build.rs
src/linking/my_real_project/: Cargo.toml  build.rs
src/node/: index.md
src/objects/: Makefile  index.md  main.c  my_vec.h  my_vec.rs
src/pod/: Makefile  add_points.rs  index.md  main.c  points
src/python/: index.md
src/pythonic/: Makefile  index.md  main.py  test_primes.py
src/pythonic/primes/: Cargo.toml
src/pythonic/primes/src/: lib.rs
src/strings/: Makefile  chars.rs  dummy.c  dummy.rs  index.md  main.c  main.rs  main_chars.c  main_versions.c  versions.rs
src/structs/: Makefile  index.md
src/structs/get_usage/: Cargo.toml  build.rs
src/structs/get_usage/src/: main.rs  usage.c
src/the-basics/: .gitignore  Makefile  index.md  main.c  print.rs
src/wrap-libmagic/: Makefile  index.md  libmagic_example.c
src/wrap-libmagic/magic/: Cargo.toml
src/wrap-libmagic/magic-sys/: Cargo.toml  build.rs  wrapper.h
src/wrap-libmagic/magic-sys/src/: lib.rs
src/wrap-libmagic/magic/src/: lib.rs
theme/: index.hbs
