[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A plugin which will stealthily inject a special header into your requests."
name = "injector-plugin"
version = "0.1.0"

[dependencies]
log = "0.3.8"
env_logger = "0.4.3"
client = { path = "../client" }

[lib]
name = "injector_plugin"
crate-type = [
    "cdylib",
    "rlib",
]
